<resources>
    <string name="MONEDA_ARGENTINA">Peso argentino</string>
    <string name="MONEDA_EEUU">Dólar</string>
    <string name="MONEDA_ESPANIA">Euro</string>
    <string name="MONEDA_JAPON">Yen</string>
    <string name="MONEDA_BRASIL">Real</string>
    <string name="MONEDA_REINO_UNIDO">Libra</string>
    <string name="MONEDA_URUGUAY">Peso uruguayo</string>
    <string name="MONEDA_CHILE">Peso chileno</string>

    <string name="PAIS_ARGENTINA">Argentina</string>
    <string name="PAIS_EEUU">Estados Unidos</string>
    <string name="PAIS_ESPANIA">España</string>
    <string name="PAIS_JAPON">Japón</string>
    <string name="PAIS_BRASIL">Brasil</string>
    <string name="PAIS_REINO_UNIDO">Reino Unido</string>
    <string name="PAIS_URUGUAY">Uruguay</string>
    <string name="PAIS_CHILE">Chile</string>

    <string name="FORMATO_FECHA">dd-MM-yyyy</string>

<string name="cargando">Cargando...</string>
    <string name="carga_fallida">Información no disponible</string>
    <string name="carga_fallida_ext">No se pudo cargar información sobre la divisa:</string>

    <string name="automatico_ubicacion">Automático según ubicación</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <!-- MENU -->
    <string name="divisas">Divisas</string>
    <string name="historial">Historial</string>
    <string name="configuracion">Configuración</string>
    <string name="perfil">Perfil</string>
    <!--END MENU -->

    <!-- DETALLE -->
    <string name="saldo_actual">Saldo actual</string>
    <string name="su_saldo">Su saldo:</string>
    <string name="historia">Historia</string>
    <string name="ubicacion">Ubicación</string>
    <!-- DETALLE END -->

    <!-- SETTINGS -->
    <string name="moneda_base_desc">Establecer la moneda con la cual se van a comparar las divisas</string>

    <string name="intervalo_historial">Intervalo del Historial</string>
    <string name="intervalo_historial_desc">Establecer el intervalo de muestreo del gráfico del historial de las divisas</string>

    <string name="activar_notificaciones">Activar notificaciones</string>

    <string name="cambio_base_automatica">Divisa regional</string>
    <string name="cambio_base_automatica_desc">Permite el cambio de la divisa base según la ubicación actual</string>

    <string name="sonido">Sonido</string>
    <string name="vibracion">Vibrar</string>

    <string name="aviso_importante">Aviso importante</string>
    <string name="aviso_importante_desc">Recibir notificaciones cuando haya cambios bruscos en las cotizaciones</string>
    <!-- END SETTINGS -->




    <string name="moneda_base">Moneda base</string>
    <string name="cotizaciones">Cotizaciones</string>
    <string name="dias">días</string>
    <string name="valores_cambiarios">Valores cambiarios</string>
    <string name="devaluacion">Devaluación</string>
    <string name="convertibilidad">Convertibilidad</string>
    <string name="notificaciones">Notificaciones</string>

    <string name="devaluacion1">Tu saldo actual de </string>
    <string name="devaluacion2">equivale a haber tenido</string>
    <string name="devaluacion3">el</string>

    <string name="convertibilidad_venta_base_1">Si vende sus</string>
    <string name="convertibilidad_venta_base_2">obtendrá</string>

    <string name="convertibilidad_compra_divisa_1">Con sus</string>
    <string name="convertibilidad_compra_divisa_2">puede comprar</string>

    <string name="notificaciones_avisos_suba">Recibir avisos cuando haya subas</string>
    <string name="notificaciones_avisos_baja">Recibir avisos cuando haya bajas</string>


    <string name="app_name">DivisApp</string>
    <string name="title_activity_swipe">DivisApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="facebook_app_id">1924101540976240</string> <string name="fb_login_protocol_scheme">fb1924101540976240</string>

    <!-- START LOGIN-->
    <string name="logins_options">Ingresar con</string>
    <string name="entrar_con_mail">Entrar con Mail</string>
    <string name="entrar_como_invitado">Entrar como Invitado</string>
    <string name="entrar_con_facebook">ENTRAR CON FACEBOOK</string>



    <!-- END LOGIN-->
    <!-- START PROFILE-->
    <string name="cargar_saldo_actual">Cargar saldo actual</string>
    <string name="cargar_divisa_de_intercambio">Cargar divisa de intercambio</string>
    <string name="ver_evoluci_n">Ver evolución</string>
    <string name="invitar_a_un_amigo">Invitar a un amigo</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="str_invitado">Invitado</string>
    <string name="usuario_invitado">Usuario invitado</string>
    <string name="usuario_de_facebook">Usuario de Facebook</string>
    <!-- END PROFILE-->
</resources>
