<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#192226"
            android:letterSpacing="0.2"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/logins_options"
            android:textAllCaps="true"
            android:textColor="@color/colorTextSelected"
            android:textSize="14sp" />

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="@string/entrar_con_facebook"
            android:id="@+id/btnFB"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:id="@+id/btnMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divisa_ppal_gris"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/entrar_con_mail"
            android:clickable="true"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divisa_ppal_gris"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/entrar_como_invitado"
            android:clickable="true"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>